[package]
name = "librustbin"
version = "0.3.0"
edition = "2024"
description = "Rust client library for rustbin"
license = "MIT"
repository = "https://github.com/cyberknight777/librustbin"
authors = ["@PeroSar <perosar1111@gmail.com>, @cyberknight777 <cyberknight755@gmail.com>"]

[dependencies]
reqwest = { version = "0.13", features = ["multipart"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
